--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -31,13 +31,13 @@ DOXYFILE_ENCODING      = UTF-8
 # title of most generated pages and in a few other places.
 # The default value is: My Project.
 
-PROJECT_NAME           = "CppTemplate"
+PROJECT_NAME           = @CMAKE_PROJECT_NAME@
 
 # The PROJECT_NUMBER tag can be used to enter a project or revision number. This
 # could be handy for archiving the generated documentation or if some version
 # control system is used.
 
-PROJECT_NUMBER         = 0.0.1
+PROJECT_NUMBER         = @@CMAKE_PROJECT_NAME@_VERSION_MAJOR@.@@CMAKE_PROJECT_NAME@_VERSION_MINOR@.@@CMAKE_PROJECT_NAME@_VERSION_PATCH@
 
 # Using the PROJECT_BRIEF tag one can provide an optional one line description
 # for a project that appears at the top of each page and should give viewer a
@@ -755,7 +755,7 @@ WARN_LOGFILE           =
 # spaces.
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = @SOURCE_PATH@
+INPUT                  = @INCLUDE_PATH@
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -807,7 +807,7 @@ EXCLUDE_SYMLINKS       = NO
 # Note that the wildcards are matched against the file with absolute path, so to
 # exclude all test directories for example use the pattern */test/*
 
-EXCLUDE_PATTERNS       = */Tests/*
+EXCLUDE_PATTERNS       = */tests/*
 EXCLUDE_PATTERNS       += */ConfigurationFiles/*
 EXCLUDE_PATTERNS       += */.git/*
 
@@ -822,7 +822,6 @@ EXCLUDE_PATTERNS       += */.git/*
 
 EXCLUDE_SYMBOLS        = boost
 EXCLUDE_SYMBOLS        += Eigen
-EXCLUDE_SYMBOLS        += cpp_template::tests
 
 # The EXAMPLE_PATH tag can be used to specify one or more files or directories
 # that contain example code fragments that are included (see the \include
