--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -37,7 +37,7 @@ PROJECT_NAME           = @CMAKE_PROJECT_NAME@
 # could be handy for archiving the generated documentation or if some version
 # control system is used.
 
-PROJECT_NUMBER         = @@CMAKE_PROJECT_NAME@_VERSION_MAJOR@.@@CMAKE_PROJECT_NAME@_VERSION_MINOR@.@@CMAKE_PROJECT_NAME@_VERSION_PATCH@
+PROJECT_NUMBER         = @CMAKE_PROJECT_VERSION@
 
 # Using the PROJECT_BRIEF tag one can provide an optional one line description
 # for a project that appears at the top of each page and should give viewer a
