Add FIND_DEPEND option to switch on/off find_package() in main CMakeLists. Update readme with FIND_DEPEND option. Update requirements section. Pull in update to SAM module to fix error on Travis.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}  "${PROJECT_PATH}/cmake/Modules/")
 OPTION(BUILD_MAIN                            "Build main" OFF)
 OPTION(BUILD_DOCS                            "Build docs" OFF)
 OPTION(BUILD_TESTS                           "Build tests" OFF)
+OPTION(FIND_DEPEND                           "Find locally-installed dependencies" ON)
 
 # Set CMake build-type. If it not supplied by the user, the default built type is "Release". 
 if((NOT CMAKE_BUILD_TYPE) OR (CMAKE_BUILD_TYPE STREQUAL "Release"))
@@ -67,8 +68,6 @@ endif(WIN32)
 
 # Allows for external dependencies to be built by CMake.
 include(ExternalProject)
-
-find_package(Git REQUIRED)
 
 include_directories(AFTER "${INCLUDE_PATH}")
 
@@ -120,7 +119,9 @@ if(BUILD_TESTS)
 
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${TESTS_PATH})
 
-  find_package(CATCH)
+  if(FIND_DEPEND)
+    find_package(CATCH)
+  endif(FIND_DEPEND)
 
   if(NOT CATCH_FOUND)
     message(STATUS "Catch will be downloaded when ${CMAKE_PROJECT_NAME} is built")
